2001-10-24  jacob berkman  <jacob@ximian.com>

	* configure.in: don't fail if esound / audiofile aren't found (and
	a better check for them)

2001-10-23  jacob berkman  <jacob@ximian.com>

	* configure.in: get audiofile and esound flags from pkgconfig

2001-10-18  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: add gconf checks.

2001-10-05  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Walloon (wa) to the languages list.

2001-09-26  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Update to 1.104.0

2001-09-21  Havoc Pennington  <hp@redhat.com>

	* autogen.sh: remove CERTIFIED_GNOMIE

2001-09-19  Frank Belew  <frb@ximian.com>

	* configure.in: remove AM_CONDITIONAL that has no effect

2001-09-18  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am (EXTRA_DIST): Add COPYING.LIB

	* COPYING.LIB: Add this file.

Sun Sep 09 16:54:21 2001  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* libgnome/gnome-init.c, libgnome/gnome-program.c: Added some
	  documentation

Sun Sep 09 00:16:03 2001  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* Makefile.am, doc/Makefile.am, configure.in: Add build
	  infrastructure for documentation.

Mon Sep 03 17:27:04 2001  George Lebl <jirka@5z.com>

	* configure.in: raise version to 1.103.0

2001-09-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgnome/gnome-i18n.h: removed #define's for gettext macros, and
	include bonobo/bonobo-i18n.h, which includes them

2001-09-02  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am: Don't build tests/
	
	* configure.in: Don't build tests, remove bonobo-config dependency.
	
	* idl/ChangeLog: Remove.
	
	* idl/Gnome.idl: Remove.
	
	* idl/Makefile.am: Remove.

Sat Sep 01 23:05:23 2001  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h: Add some HAVE_ defines, and again
	  look for esd and audiofile

Sun Aug 26 18:39:43 2001  George Lebl <jirka@5z.com>

	* libgnome/configure.in, libgnome/libgnome-2.0.pc.in:  Require GConf
