@@ -33,12 +33,8 @@ gnome-libs.spec
 .lclintrc
 libvfs
 compatConf.sh
-libgnome2-*.tar.gz
+libgnome-*.tar.gz
 deptree
-xml-i18n-extract
-xml-i18n-merge
-xml-i18n-merge.in
-xml-i18n-update
-xml-i18n-extract.in
-xml-i18n-update.in
+xml-i18n-*
 sgml
+intltool-*
