@@ -1,4 +1,7 @@
 SUBDIRS = libgnome po doc
 
 EXTRA_DIST = message-of-doom COPYING.LIB
+	intltool-extract.in  \
+	intltool-merge.in    \
+	intltool-update.in
 
