@@ -33,7 +33,7 @@
 #define __GNOME_I18NP_H__ 1
 
 #ifndef GNOME_EXPLICIT_TRANSLATION_DOMAIN
-#  define GNOME_EXPLICIT_TRANSLATION_DOMAIN PACKAGE
+#  define GNOME_EXPLICIT_TRANSLATION_DOMAIN GETTEXT_PACKAGE
 #endif
 #include "gnome-i18n.h"
 
