@@ -1,3 +1,10 @@
+2001-10-29  jacob berkman  <jacob@ximian.com>
+
+	* gnome-init.c: use GETTEXT_PACKAGE where appropriate
+
+	* gnome-i18nP.h (GNOME_EXPLICIT_TRANSLATION_DOMAIN): use
+	GETTEXT_PACKAGE
+
 2001-10-26  Michael Meeks  <michael@ximian.com>
 
 	* libgnome.schema: add menus-have-icons, so we get some icons.
